--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ristorante Bella Vita – Zürich</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ristorante Bella Vita</title>
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header class="nav">
   <div class="nav-inner">
-    <img src="assets/logo.png" class="logo" alt="Bella Vita Logo">
+    <img src="assets/logo.png" class="logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">Über uns</a>
@@ -33,23 +33,22 @@
 <section class="features">
   <div class="card reveal">
     <h3>🇮🇹 Originalrezepte</h3>
-    <p>Traditionelle Gerichte nach Familienrezepten.</p>
+    <p>Tradition aus Italien</p>
   </div>
   <div class="card reveal">
-    <h3>🍷 Exzellente Weine</h3>
-    <p>Handverlesene Weine aus ganz Italien.</p>
+    <h3>🍷 Weinkarte</h3>
+    <p>Ausgewählte Tropfen</p>
   </div>
   <div class="card reveal">
-    <h3>📍 Zentrale Lage</h3>
-    <p>Direkt in der Zürcher Altstadt.</p>
+    <h3>📍 Zürich</h3>
+    <p>Zentrale Lage</p>
   </div>
 </section>
 
 <footer class="footer">
-  <p>© 2026 Ristorante Bella Vita – Zürich</p>
+  <p>© 2026 Bella Vita</p>
 </footer>
 
-<script src="reveal.js"></script>
+<script src="js/reveal.js"></script>
 </body>
 </html>
-
