--- a/about.html
+++ b/about.html
@@ -2,29 +2,25 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Über uns – Bella Vita</title>
+  <title>Über uns</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header class="nav">
   <div class="nav-inner">
-    <a href="index.html">← Zurück</a>
+    <a href="index.html">← Home</a>
   </div>
 </header>
 
 <section class="content reveal">
   <h1>Unsere Geschichte</h1>
   <p>
-    Bella Vita wurde 1998 von der Familie Romano gegründet.
-    Unsere Leidenschaft ist es, die italienische Esskultur
-    nach Zürich zu bringen – frisch, ehrlich und voller Geschmack.
+    Seit 1998 steht Bella Vita für ehrliche italienische Küche
+    mit Leidenschaft, Qualität und Herz.
   </p>
 </section>
 
-<footer class="footer">
-  <p>Impressum | Datenschutz</p>
-</footer>
-
+<script src="js/reveal.js"></script>
 </body>
 </html>
