--- a/menu.html
+++ b/menu.html
@@ -3,32 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <title>Menü – Bella Vita</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+<header class="nav">
+  <div class="nav-inner">
+    <a href="index.html">← Home</a>
+  </div>
+</header>
+
 <section class="content reveal">
   <h1>Unser Menü</h1>
 
-  <div class="menu-card">
-    <h3>Spaghetti Carbonara</h3>
-    <p>Guanciale, Ei, Pecorino Romano</p>
+  <div class="menu-card reveal">
+    <div>
+      <h3>Spaghetti Carbonara</h3>
+      <p>Guanciale, Ei, Pecorino Romano</p>
+    </div>
     <span>CHF 24.–</span>
   </div>
 
-  <div class="menu-card">
-    <h3>Pizza Margherita</h3>
-    <p>San Marzano Tomaten, Mozzarella, Basilikum</p>
+  <div class="menu-card reveal">
+    <div>
+      <h3>Pizza Margherita</h3>
+      <p>Tomaten, Mozzarella, Basilikum</p>
+    </div>
     <span>CHF 19.–</span>
   </div>
 
-  <div class="menu-card">
-    <h3>Tiramisu</h3>
-    <p>Hausgemacht</p>
+  <div class="menu-card reveal">
+    <div>
+      <h3>Tiramisu</h3>
+      <p>Hausgemacht</p>
+    </div>
     <span>CHF 12.–</span>
   </div>
-
 </section>
 
+<script src="js/reveal.js"></script>
 </body>
 </html>
