--- a/reservation.html
+++ b/reservation.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Reservation – Bella Vita</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<header class="nav">
+  <div class="nav-inner">
+    <a href="index.html">← Home</a>
+  </div>
+</header>
 
 <section class="content reveal">
   <h1>Tisch reservieren</h1>
@@ -22,5 +29,6 @@
   </form>
 </section>
 
+<script src="js/reveal.js"></script>
 </body>
 </html>
