--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ristorante Bella Vita</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<title>Ristorante Bella Vita – Zürich</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header class="nav">
   <div class="nav-inner">
-    <img src="assets/logo.png" class="logo">
+    <img src="assets/logo.png" class="logo" alt="Bella Vita">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">Über uns</a>
@@ -25,28 +25,28 @@
 <section class="hero">
   <div class="hero-content reveal">
     <h1>Ristorante Bella Vita</h1>
-    <p>Authentische italienische Küche im Herzen von Zürich</p>
+    <p>Traditionelle italienische Küche mit Weinrot & Weiß – Authentisch, modern und liebevoll zubereitet.</p>
     <a href="menu.html" class="btn-primary">Menü entdecken</a>
   </div>
 </section>
 
 <section class="features">
   <div class="card reveal">
-    <h3>🇮🇹 Originalrezepte</h3>
-    <p>Tradition aus Italien</p>
+    <h3>Originalrezepte</h3>
+    <p>Familienrezepte seit 1920 aus Italien – authentischer Geschmack auf deinem Teller.</p>
   </div>
   <div class="card reveal">
-    <h3>🍷 Weinkarte</h3>
-    <p>Ausgewählte Tropfen</p>
+    <h3>Italienische Weine</h3>
+    <p>Handverlesene Weine aus allen Regionen Italiens.</p>
   </div>
   <div class="card reveal">
-    <h3>📍 Zürich</h3>
-    <p>Zentrale Lage</p>
+    <h3>Zentrale Lage</h3>
+    <p>Direkt im Niederdörfli, Zürich – einfach erreichbar.</p>
   </div>
 </section>
 
 <footer class="footer">
-  <p>© 2026 Bella Vita</p>
+  <p>© 2026 Ristorante Bella Vita – Zürich</p>
 </footer>
 
 <script src="js/reveal.js"></script>
