--- a/hours-location.html
+++ b/hours-location.html
@@ -20,7 +20,7 @@
 
 <iframe
   class="map reveal"
-  src="https://www.google.com/maps/place/Schauplatz+Brunngasse/@47.3731423,8.5441719,21z/data=!4m15!1m8!3m7!1s0x4791cc90b8e20157:0xa635032ede90e973!2sNiederdorf!3b1!8m2!3d47.407313!4d7.7525983!16zL20vMGc2ZDly!3m5!1s0x479aa1c48165ffcb:0x7c6643ad8f9291be!8m2!3d47.3731434!4d8.5445236!16s%2Fg%2F11spr0vw3x?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D"
+  src="https://www.google.com/maps?q=Niederd%C3%B6rfli+Z%C3%BCrich&output=embed"
   loading="lazy">
 </iframe>
 </section>
