--- a/about.html
+++ b/about.html
@@ -19,19 +19,10 @@
   <img src="assets/familie_trattoria.jpg" alt="Familie Bella Vita" class="story-img reveal">
 
   <p>
-    Die Familie Romano eröffnete 1920 im kleinen Dorf Montelupo in Italien ihr erstes Restaurant. 
-    Damals war es ein bescheidenes Gasthaus, in dem die Dorfbewohner frische Pasta und hausgemachte Saucen genossen. 
-    Der junge Antonio Romano träumte davon, die italienische Lebensfreude in die Welt hinauszutragen. 
-    Er experimentierte mit regionalen Zutaten, traditionellen Rezepten und neuen Zubereitungstechniken. 
-    Durch seine Leidenschaft wuchs das kleine Gasthaus schnell zu einem beliebten Treffpunkt für Reisende und Einheimische. 
-    Die Philosophie war immer dieselbe: Frische Zutaten, liebevolle Zubereitung und familiäre Gastfreundschaft. 
-
-    In den 1950er Jahren expandierte die Familie und eröffnete mehrere Filialen in Norditalien. 
-    Jede Generation der Romano-Familie trug zur Weiterentwicklung bei, behielt aber stets die ursprüngliche Tradition im Herzen. 
-    1980 kam der Enkel Marco nach Zürich und eröffnete hier das erste Ristorante Bella Vita. 
-    Ziel war es, die wahre italienische Küche in die Schweiz zu bringen, mit derselben Liebe zum Detail und derselben Leidenschaft, die schon 1920 begann. 
-    Heute, über 100 Jahre nach den ersten Schritten der Familie, verbindet Ristorante Bella Vita Tradition, moderne Küche und ein einzigartiges Ambiente. 
-    Besucher erleben die Geschichte Italiens auf ihrem Teller, begleitet von erlesenen Weinen und authentischen Aromen.
+    Die Familie Romano eröffnete 1920 im kleinen Dorf Montelupo in Italien ihr erstes Restaurant. Damals war es ein bescheidenes Gasthaus, in dem die Dorfbewohner frische Pasta und hausgemachte Saucen genossen. Der junge Antonio Romano träumte davon, die italienische Lebensfreude in die Welt hinauszutragen. Er experimentierte mit regionalen Zutaten, traditionellen Rezepten und neuen Zubereitungstechniken. Durch seine Leidenschaft wuchs das kleine Gasthaus schnell zu einem beliebten Treffpunkt für Reisende und Einheimische. Die Philosophie war immer dieselbe: Frische Zutaten, liebevolle Zubereitung und familiäre Gastfreundschaft.
+  </p>
+  <p>
+    In den 1950er Jahren expandierte die Familie und eröffnete mehrere Filialen in Norditalien. Jede Generation der Romano-Familie trug zur Weiterentwicklung bei, behielt aber stets die ursprüngliche Tradition im Herzen. 1980 kam der Enkel Marco nach Zürich und eröffnete hier das erste Ristorante Bella Vita. Ziel war es, die wahre italienische Küche in die Schweiz zu bringen, mit derselben Liebe zum Detail und derselben Leidenschaft, die schon 1920 begann. Heute, über 100 Jahre nach den ersten Schritten der Familie, verbindet Ristorante Bella Vita Tradition, moderne Küche und ein einzigartiges Ambiente. Besucher erleben die Geschichte Italiens auf ihrem Teller, begleitet von erlesenen Weinen und authentischen Aromen.
   </p>
 </section>
 
