--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
 
 <section class="content reveal">
   <h1>Unsere Geschichte</h1>
-  <img src="assets/familie_trattoria.jpg" alt="Familie Bella Vita" class="story-img reveal">
+  <img src="assets/familie.jpg" alt="Familie Bella Vita" class="story-img reveal">
+
 
   <p>
     Die Familie Romano eröffnete 1920 im kleinen Dorf Montelupo in Italien ihr erstes Restaurant. Damals war es ein bescheidenes Gasthaus, in dem die Dorfbewohner frische Pasta und hausgemachte Saucen genossen. Der junge Antonio Romano träumte davon, die italienische Lebensfreude in die Welt hinauszutragen. Er experimentierte mit regionalen Zutaten, traditionellen Rezepten und neuen Zubereitungstechniken. Durch seine Leidenschaft wuchs das kleine Gasthaus schnell zu einem beliebten Treffpunkt für Reisende und Einheimische. Die Philosophie war immer dieselbe: Frische Zutaten, liebevolle Zubereitung und familiäre Gastfreundschaft.
