--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <header class="nav">
   <div class="nav-inner">
-    <img src="assets/logo.png" class="logo" alt="Bella Vita">
+    <!-- Statt Bild: Schriftzug -->
+    <div class="logo-text">Ristorante Bella Vita</div>
+
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">Über uns</a>
@@ -21,6 +23,7 @@
     </nav>
   </div>
 </header>
+
 
 <section class="hero">
   <div class="hero-content reveal">
